syntax = "proto3";

package hash_v1;

option go_package = "github.com/Andrets/grpc-go-hash-microservice/pkg/hash_v1;hash_v1";

service HashService {
	rpc HashPassword (HashPasswordRequest) returns (HashPasswordResponse) {}
	rpc ValidatePassword (ValidatePasswordRequest) returns (ValidatePasswordResponse) {}
}

message HashPasswordRequest {
	string password = 1;
}

message HashPasswordResponse {
	string hashedpassword = 1;
}

message ValidatePasswordRequest {
	string password = 1;
	string hashedpassword = 2;
}

message ValidatePasswordResponse {
	bool isValid = 1;
}